# ScrapHacks

./: .gitignore  EngineVarRemastered  LICENSE  NOTES.md  README.md  config.yml  helplib.md  helplib.txt  parse_save.py  r2_analyze.py  rz_analyze.py  scrapper.py  vim.exe.stackdump
Py_Docs/: SAI.md  SAct.md  SFX.md  SInput.md  SLogic.md  SNet.md  SScorer.md  SSound.md  SVec.md  SWeap.md  Scrap.md
ScrapHacks/: .clang-format  .gitignore  CMakeLists.txt  README.md  Scrapland_Tools.sln  build.bat  patcher.py
ScrapHacks/Injector/: CMakeLists.txt  Injector.cpp  Injector.sln  main.cpp
ScrapHacks/Injector/Injector/: Injector.cpp  Injector.vcxproj  Injector.vcxproj.filters  stdafx.cpp  stdafx.h
ScrapHacks/ScrapHack/: CMakeLists.txt  D3D8_Hook.h  Hook.h  Py_Utils.h  REPL.h  ScrapHack.cpp  ScrapHack.vcxproj  ScrapHack.vcxproj.filters  Scrapland.h  Structures.h  Util.h  VMT_Hook.h  dllmain.cpp  stdafx.cpp  stdafx.h
ScrapHacks/src/: D3D8_Hook.hpp  D3D8_VMT.hpp  Hook.hpp  Py_Mod.hpp  Py_Utils.hpp  REPL.hpp  ScrapHack.cpp  Scrapland.hpp  Structures.hpp  Util.hpp  dllmain.cpp  make_D3D8_VMT.py
ScrapHacks/src/python/: ScrapHack.py  dbg.py
ScrapHacks/utils/: make_D3D8_VMT.py
Scrapper_rs/: .gitignore  Cargo.toml
Scrapper_rs/src/: main.rs
file_formats/: ai_path.md  chunked.md  packed.md
frida/: frida_hook_net.js  frida_hook_read_trace.js  frida_inject_net.py  frida_inject_read_trace.py  frida_mem_mon.js  frida_mem_mon.py  frida_stalker_test.js  frida_stalker_test.py  utils.js
lib/: dbg.py
notes/: .gitignore  book.toml  mermaid-init.js
notes/src/: Chunked.md  Classes.md  File.md  MultiSpriteTable.md  Netplay.md  Nodegraph.md  Overview.md  PE_metadata.md  Packed.md  Python.md  Python_Modules.md  SUMMARY.md  ScrapEngine.md  ScrapHacks.md  Variables.md  World.md
tools/: analyze_read_trace.py  binvis.py  dissect_net.py  packed.ksy  parse_LFVF.py  parse_chunked.py  parse_chunked_new.py  rbingrep.py  render_ai_path.py  save_to_json.py  scrapper.py  scrapper_gui.py  server.py  test.bv
